--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css"></script>
     <link src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css">
-    <link rel="stylesheet" href="Tribute_page.js">
+    <link rel="stylesheet" href="tribute_page.css">
 </head>
 
 <body>  
@@ -58,5 +58,5 @@ Inio Asano</h1>
     </main>
   </body>
   <script src="https://rawgit.com/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
-  <script src="tribute_page.css"></script>
+  <script src="Tribute_page.js"></script>
   </html>
