--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@ Inio Asano</h1>
     
     </main>
   </body>
-  <script src="https://rawgit.com/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <script src="Tribute_page.js"></script>
   </html>
