--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="tribute_page.css">
 </head>
 
@@ -49,7 +48,7 @@ Inio Asano</h1>
         </fieldset>
       <a id="tribute-link" href="http://tvtropes.org/pmwiki/pmwiki.php/Creator/InioAsano" target="_blank">More about Asano Inio on goodreads.com</a>
       </article>
-    <footer> VictorCojocaru2018?</footer>
+    <footer> Coded by Victor Cojocaru 2018</footer>
     
     </main>
   </body>
