--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Inio Asano</h1>
       </div>
       <fieldset>
           <p> A new Asano Inio quote every 10 seconds:</p>
-          <blockquote id="quote"></blockquote>
+          <blockquote id="quote">This is the main character, what do you think? - Goodnight PunPun.  Inio Asano</blockquote>
         </fieldset>
       <a id="tribute-link" href="http://tvtropes.org/pmwiki/pmwiki.php/Creator/InioAsano" target="_blank">More about Asano Inio on goodreads.com</a>
       </article>
